[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD/ScoreScreen.gd" type="Script" id=1]

[node name="ScoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.2843
margin_top = 0.707153
margin_right = -28.2842
margin_bottom = 0.707153
script = ExtResource( 1 )

[node name="Score" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 3, 3 )

[node name="Label_ScoreText" type="Label" parent="Score"]
margin_left = -25.261
margin_right = 9.73901
margin_bottom = 14.0
text = "Score"

[node name="Label_WinText" type="Label" parent="Score"]
margin_left = -25.5719
margin_top = -14.9024
margin_right = 9.42809
margin_bottom = -0.902386
text = "Winner!"

[node name="Label_ScoreAmount" type="Label" parent="Score"]
margin_left = 14.793
margin_right = 22.793
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_PressToContinue" type="Label" parent="Continue"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 60.0
margin_right = 73.0
margin_bottom = 74.0
text = "Press Fire To Continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="ScoreTween" to="." method="_on_ScoreTween_tween_all_completed"]
